# LineAlgHoraires

./: Problem-pulp.lp  Problem-pulp.sol  README.md  main.py  pyproject.toml
data/: ELEC-H3001-2022.csv  formatSession.csv  preferences.csv
data/2022-ELECH3001/: ELEC-H3001-2022.xlsx  elech3001-2022-formatSession.csv  elech3001-2022-formatSession.xlsx
data/2022-PHYSH1001/: PHYS-H1001-2022.csv  physh1001-2022-formatSession.csv
data/2023-CHIMH2001/: format.csv  preferences.csv
src/: Problem-pulp.lp  Problem-pulp.sol  Schedule_stud_and_date.csv  main.py  randomGenerator.py
src/data/: RandomPreferences.csv  RandomPreferences_100.csv  RandomPreferences_150.csv  RandomPreferences_200.csv  RandomPreferences_300.csv  RandomPreferences_50.csv  RandomPreferences_500.csv  formatSession.csv
