[tool.poetry]
name = "linealghoraires"
version = "0.1.0"
description = ""
authors = ["Sami <samiabdulsater@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
PuLP = "^2.6.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
